crates/engine/src/snapshots/engine__write__splice__set_item_slot_b.snap
---
source: crates/engine/src/write.rs
expression: out
---
---
title: Auth flow
---

# Auth flow

## Criteria

### Rate limit holds  {#rate-limit}

The gateway rejects the 101st request.

<!-- fields -->
- implemented-by: src/gateway.rs

### Burst allowance  {#burst-allowance}

A short burst is tolerated for two seconds.

<!-- fields -->
- implemented-by: src/burst.rs
